Fixed gap issues in Menu that caused Hover to break

--- a/scss/universal.scss
+++ b/scss/universal.scss
@@ -2,6 +2,9 @@
 .dropdown:hover>.dropdown-menu {
   display: block;
 }
+.dropdown-menu {
+  margin-top: -4px;
+}
 
 /* Header, Body and Footer Layout */
 
